@@ -173,3 +173,10 @@
 	* Fix issue whereby malformed @media rules could cause an infinite loop within the Parser
 	* Attempt to fix issue whereby moder perl // defined test still not working perl
 	* Attempt to fix issue whereby Makefile will not properly generate the latest README file
+
+3937	2013-03-18	Kevin Kamel <kamelkev@mailermailer.com>
+	* Add generalized at-rule support to CSS::Inliner::Parser, @media support is reimplemented
+	* Provide granularity for retrieving rules by rule name, exa qualified, @import, @media, etc
+	* Attempt to improve whitespace handling when printing out a stylesheet from CSS::Inliner::Parser
+	* Add support for including at-rule when printing out a stylesheet from CSS::Inliner::Parser
+        * Add tests for ensuring that at-rule are working as expected
